syntax = "proto3";
package NirnRevenueService;

option go_package = "github.com/techyshishy/nirn-revenue-service/api/proto";

import "api/proto/sale.proto";

message ItemVariant {
    uint64 Id = 1;
    string Variant = 2;
    string Description = 3;
    int64 OldestTime = 4;
    int64 NewestTime = 5;
    uint64 TotalCount = 6;
    bool Altered = 7;
    string ItemAdderText = 8;
    string Icon = 9;
    repeated Sale sale = 10;
    string Link = 11;
}